fix alignment issue

--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 	width: 10rem;
 	height: 30rem;
 	background-color:#f2f2f2;
-	padding-left: 5em;
+	padding-left: 7em;
 	position:absolute;
     left:0px;
-    top:0px;
+    top:5px;
     z-index:-1;
 
 
@@ -19,7 +19,9 @@
 	width: 15rem;
 	height: 50rem;
 	color: black;
-	padding-top: 30em;
+	padding-top: 30rem;
+	
+
 
 }
 
@@ -29,6 +31,7 @@ ul{
 
 .price{
 	font-size: 1.5em;
+
 
 }
 
@@ -40,7 +43,7 @@ a {
 .onlyinREI{
 
   position:absolute;
-  left:40px;
+  left:10px;
   top:10px;
-  z-index:-1;
+  z-index:1;
 }
